--- a/README
+++ b/README
@@ -4,3 +4,6 @@
   This package provides a python script that compares the verion
   configuration of two plone configuration files.  The script takes
   exacly two arguments, the filenames of the scripts to be compared.
+
+* Contributers
+  Dimitar Dimitrov
