--- a/README
+++ b/README
@@ -14,6 +14,8 @@
 * Changes
 ** 0.1.3 (unreleased)
    * make compatible with python3 [Sebastian Jordan]
+   * drop support for python2 [Sebastian Jordan]
+   * implement support for arbitrary urls [Sebastian Jordan]
 
 ** 0.1.2
    * Fixed bug that caused program to crash [Sebastian Jordan]
